<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YBoloTV</string>
	<string name="local_video">Play Video from Local File</string>
	<string name="local_video_setsurface">Play Video use setSurface</string>
    <string name="stream_video">Play Streaming Video</string>
    <string name="local_audio">Play Audio from Local File</string>
    <string name="res_audio">Play Audio from Resources</string>
    <string name="title_activity_video_subtitle_demo">VideoSubtitleDemo</string>
    <string name="action_settings">Settings</string>
    <string name="subtitle1">MediaPlayer  Subtitles</string>
    <string name="subtitle12">VideoView Subtitles</string>
    <string name="title_activity_media_player_subtitle">MediaPlayerSubtitle</string>
    <string name="title_activity_video_view_subtitle">VideoViewSubtitle</string>
    <string name="title_activity_video_subtitle_list">VideoSubtitleList</string>
    <string name="title_activity_video_buffer">VideoViewBuffer</string>
    <string name="openvideo1">Open Video1</string>
    <string name="openvideo2">Open Video2</string>

    <string name="home_title">YBolo安卓盒子</string>
    <string name="home_live">直播</string>
    <string name="home_vod">视频</string>
    <string name="home_news">要闻速递</string>
    <string name="online_meeting">视频会议</string>
    <string name="home_history">观看历史</string>
    <string name="home_settings">系统设置</string>
    <string name="home_network">平台网络</string>
    <string name="home_upgrade">系统升级</string>

    <string name="live_list_title">直播</string>

    <string name="vod_list_title">视频</string>

    <string name="news_list_title">新闻速递</string>

    <string name="vod_his_list_title">观看历史</string>
    <string name="vod_his_list_clear">清空历史记录</string>

</resources>